# ConvolutionalNeuralNetwork

./: .gitignore  ActivationFunctionsProvider.cpp  ActivationFunctionsProvider.h  CMakeLists.txt  LossFunctionsProvider.cpp  LossFunctionsProvider.h  ModelLoader.cpp  ModelLoader.h  README.md  Sequential.cpp  Sequential.h  Simulation.cpp  Simulation.h  main.cpp  mnist_hrd_model.mdl
DataManager_lib/: CMakeLists.txt  DataPrep.cpp  DataPrep.h  DataProvider.cpp  DataProvider.h
Google_tests/: CMakeLists.txt  ConvolutionalLayerTests.cpp  DataProviderTests.cpp  DenseLayerTests.cpp  SequentialTest.cpp  SequentialTests.cpp  TensorTests.cpp  main.cpp  xor_model.mdl
Google_tests/lib/googlemock/include/gmock/: gmock-matchers.h
Layer_lib/: ActivationFunctionsProvider.h  BackpropagationResult.h  CMakeLists.txt  DenseLayer.cpp  DenseLayer.h  Layer.h  LayerLoader.cpp  LayerLoader.h  LayerType.h
LearningExamples_lib/: DatasetLoader.cpp  DatasetLoader.h
Network_lib/: ActivationFunctionsProvider.cpp  ActivationFunctionsProvider.h  CMakeLists.txt  LossFunctionsProvider.cpp  ModelLoader.cpp  ModelLoader.h  Sequential.cpp  Sequential.h
Network_lib/Layers/: ConvolutionalLayer.cpp  ConvolutionalLayer.h  DenseLayer.cpp  DenseLayer.h  Layer.h  LayerLoader.cpp  LayerLoader.h  LayerType.h  OutputLayer.cpp  OutputLayer.h  PoolingFunctionProvider.cpp  PoolingFunctionProvider.h  PoolingLayer.cpp  PoolingLayer.h
StringTools_lib/: CMakeLists.txt  StringTools.cpp  StringTools.h
Tensor_lib/: CMakeLists.txt  Tensor.cpp  Tensor.h  TensorLoader.cpp  TensorLoader.h
Visualisation/: SdlUtils.cpp  SdlUtils.h  Visualiser.cpp  Visualiser.h
